--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,18 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		
+		
+	
 	</dependencies>
+	
+	
 
 	<build>
 		<plugins>
