--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-spring.datasource.url =jdbc:mysql://localhost:3306/ensadb
+spring.datasource.url =jdbc:mysql://localhost:3306/ebanking_db
 spring.datasource.username =root
 spring.datasource.password =
 spring.datasource.driverClassName =com.mysql.jdbc.Driver
